update: testResult接口
